# baze-II-GSMS

./: GameShopFinal.sql  README.md  Thumbs.db
API kod/: ._main.cpp  CMakeLists.txt  main.cpp
SQL kod - odvojene tablice/: ._gameshop_stanje_poslovnica_nintendo.sql  gameshop_adresa.sql  gameshop_kupac.sql  gameshop_narudzbenice.sql  gameshop_poslovnica.sql  gameshop_poslovoda.sql  gameshop_posudeno.sql  gameshop_prodano.sql  gameshop_proizvod.sql  gameshop_racun.sql  gameshop_rezije.sql  gameshop_routines.sql  gameshop_stanje_poslovnica_nintendo.sql  gameshop_stanje_poslovnica_ps4.sql  gameshop_stanje_poslovnica_xbox.sql  gameshop_vracene_igre.sql  gameshop_zaposlenik.sql
